2006-10-10  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.h, EventHandler.h, EvManager.h: remove
	SessionMgr---it not used anyway. This functionality
	should be reimplemented in different manner.

	* _EventHandler.cc, NetTransport.cc, EvManager.cc: ditto.

2006-10-06  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.h, NetTransport.cc: move make_map
	from NetTransportMgr to NetTransport_base, it
	useful for any net transport.

2006-10-04  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvPack.cc: erase target string in any case---length of string
	may be indeed 0.

	* Names.h, Names.cc: add one-message report about ns records

	* EDSEv.h: provide defines for one-message report about ns records

2006-10-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Names.h, Names.cc: localize heap locking---no wait in
	the Send call [use temporary container instead]; get_by_name
	return sequence of name entries too, as get_list, not single record.

2006-09-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* _EventHandler.cc: fix wrong decrement and deinitialization
	of EvManager.

	* EventManager.cc: directly use loop thread wake up condition
	[fix problem with thread-safe signaling about loop termination].

2006-08-21  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.cc: close() should shutdown connection
	in NetTransportMgr, like in dtor.

	* NetTransport.cc: remove linger and keepalive socket
	options, it not useful, but may lead to rpblems

2006-08-04  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Cron.h, EvManager.h, NetTransport.h: changes in 
	thread entry function.
	
	* Cron.cc, EvManager.cc, NetTransport.cc: ditto.

2006-07-20  Petr Ovtchenkov  <ptr@island.corbina.net>

	* crc.h: use platform-independent uint32_t for CRC types.

	* NetTransport.cc: use platform-independent uint32_t for
	network communication.

	* Cron.h, EvSession.h, Event.h: ditto

	* EvPack.cc: ditto

2006-07-19  Petr Ovtchenkov  <ptr@island.corbina.net>
